fixed mobile issue where users can soft lock themselves if zoomed in too much

--- a/src/app/kh-farm/kh-farm.component.css
+++ b/src/app/kh-farm/kh-farm.component.css
@@ -12,5 +12,4 @@ svg {
     width: auto;
     max-width: 700px;
     min-width: 300px;
-    touch-action: none;/*lets pointer events work with mobile*/
 }
